--- a/Aula04/ex001.html
+++ b/Aula04/ex001.html
@@ -24,8 +24,8 @@
 
    <script>
     window.alert("Minha primeira mensagem em JavaScript!");
-    window.confirm("Você está gostando de JavaScript?");
-    window.prompt("Qual é o seu nome??")
+window.confirm("Você está gostando de JavaScript?"); // Janela com botão OK e Cancel
+    window.prompt("Qual é o seu nome??") // Vai perguntar o nome...
    </script>
 </body>
 </html>
